[package]
name = "railway_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
bincode = "1.3.3"
geo = "0.26.0"
osmpbfreader = "0.16.0"
printpdf = "0.5.3"
rayon = "1.7.0"
serde = { version = "1.0.183", features = ["derive"] }
