[package]
name = "railway_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
bincode = "1.3.3"
futures = "0.3.28"
futures-util = "0.3.28"
geo = "0.26.0"
indicatif = { version = "0.17.6", features = ["rayon", "tokio"] }
md5 = "0.7.0"
osm-pbf = "0.3.3"
osmpbfreader = "0.16.0"
printpdf = "0.6.0"
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["stream"] }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.0"
